The background service thread

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 arc-swap = "~0.3"
 config = "~0.9"
 failure = "~0.1"
+libc = "~0.2"
+log = "~0.4"
 serde = "~1"
 serde_derive = "~1"
 signal-hook = "~0.1"
