--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ config = "~0.9"
 failure = "~0.1"
 libc = "~0.2"
 log = "~0.4"
+log-panics = "~2"
 serde = "~1"
 serde_derive = "~1"
 signal-hook = "~0.1"
