Setting up of logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,18 @@ authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 
 [dependencies]
 arc-swap = "~0.3"
+chrono = "~0.4"
 config = "~0.9"
 failure = "~0.1"
+fern = { version = "~0.5", features = ["syslog-4"] }
+itertools = "~0.7"
 libc = "~0.2"
 log = "~0.4"
 log-panics = "~2"
+log-reroute = "~0.1"
+reopen = "~0.2"
 serde = "~1"
 serde_derive = "~1"
 signal-hook = "~0.1"
 structopt = "~0.2"
+syslog = "~4"
