--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,13 @@ libc = "~0.2"
 log = "~0.4"
 log-panics = "~2"
 log-reroute = "~0.1"
-reopen = "~0.2"
 serde = "~1"
 serde_derive = "~1"
 signal-hook = "~0.1"
 structopt = "~0.2"
 syslog = "~4"
+
+[dev-dependencies]
+futures = "~0.1"
+lazy_static = "~1"
+tokio = "~0.1"
