--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ libc = "~0.2"
 log = "~0.4"
 log-panics = "~2"
 log-reroute = "~0.1"
+parking_lot = "~0.6"
 serde = "~1"
 serde_derive = "~1"
 signal-hook = "~0.1"
