Allow travis failures on nightly

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,7 @@ script:
       (test "$TRAVIS_RUST_VERSION" != nightly || cargo test --release --benches) &&
       (test "$TRAVIS_RUST_VERSION" != nightly || cargo clippy -- --deny clippy) &&
       (test "$TRAVIS_RUST_VERSION" != nightly || cargo fmt)
+
+matrix:
+    allow_failures:
+        - rust: nightly
