--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ maintenance = { status = "actively-developed" }
 arc-swap = "~0.3"
 chrono = "~0.4"
 config = "~0.9"
+daemonize = { git = "https://github.com/vorner/daemonize", branch = "foreground" }
 failure = "~0.1"
 fallible-iterator = "~0.1"
 fern = { version = "~0.5", features = ["syslog-4"] }
