--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ maintenance = { status = "actively-developed" }
 arc-swap = "~0.3"
 chrono = "~0.4"
 config = "~0.9"
-daemonize = { git = "https://github.com/vorner/daemonize", branch = "foreground" }
 failure = "~0.1"
 fallible-iterator = "~0.1"
 fern = { version = "~0.5", features = ["syslog-4"] }
@@ -27,6 +26,7 @@ libc = "~0.2"
 log = "~0.4"
 log-panics = "~2"
 log-reroute = "~0.1"
+nix = "~0.11"
 parking_lot = "~0.6"
 serde = "~1"
 serde_derive = "~1"
