--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,17 @@ readme = "README.md"
 keywords = ["unix", "daemon", "service"]
 license = "Apache-2.0/MIT"
 
+[workspace]
+members = [
+    "./",
+    "spirit-tokio",
+]
+
 [badges]
 travis-ci = { repository = "vorner/spirit" }
 maintenance = { status = "actively-developed" }
 
 [features]
-# TODO: Select only parts of tokio, we don't need the full one
-tokio-helpers = ["futures", "tokio"]
 
 [dependencies]
 arc-swap = "~0.3"
@@ -25,7 +29,6 @@ config = { version = "~0.9", features = ["toml"] }
 failure = "~0.1"
 fallible-iterator = "~0.1"
 fern = { version = "~0.5", features = ["syslog-4"] }
-futures = { version = "~0.1", optional = true }
 itertools = "~0.7"
 libc = "~0.2"
 log = "~0.4"
@@ -38,8 +41,6 @@ serde_derive = "~1"
 signal-hook = "~0.1"
 structopt = "~0.2"
 syslog = "~4"
-tk-listen = "~0.2"
-tokio = { version = "~0.1.8", optional = true }
 
 [dev-dependencies]
 futures = "~0.1"
