--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ log-panics = "~2"
 log-reroute = "~0.1"
 nix = "~0.11"
 parking_lot = "~0.6"
+privdrop = "~0.2"
 serde = "~1"
 serde_derive = "~1"
 signal-hook = "~0.1"
