Spirit-hyper release

--- a/spirit-hyper/Cargo.toml
+++ b/spirit-hyper/Cargo.toml
@@ -20,6 +20,9 @@ hyper = "~0.12"
 serde = "~1"
 serde_derive = "~1"
 spirit = { path = "..", version = "~0.1" }
-spirit-tokio = { path = "../spirit-tokio", version = "~0.1" }
+spirit-tokio = { path = "../spirit-tokio", version = "~0.1.1" }
 structopt = "~0.2"
 tokio-io = "~0.1"
+
+[dev-dependencies]
+version-sync = "~0.5"
