--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "Apache-2.0/MIT"
 [workspace]
 members = [
     "./",
+    "spirit-daemonize",
     "spirit-hyper",
     "spirit-tokio",
 ]
@@ -35,9 +36,7 @@ libc = "~0.2"
 log = "~0.4"
 log-panics = "~2"
 log-reroute = "~0.1"
-nix = "~0.11"
 parking_lot = "~0.6"
-privdrop = "~0.2"
 serde = "~1"
 serde_derive = "~1"
 signal-hook = "~0.1"
