--- a/spirit-log/Cargo.toml
+++ b/spirit-log/Cargo.toml
@@ -1,17 +1,21 @@
 [package]
-name = "spirit-daemonize"
+name = "spirit-log"
 version = "0.1.0"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 
 [dependencies]
+chrono = "~0.4"
 failure = "~0.1"
+fern = { version = "~0.5", features = ["syslog-4"] }
+itertools = "~0.7"
 log = "~0.4"
-nix = "~0.11"
-privdrop = "~0.2"
+log-panics = "~2"
+log-reroute = "~0.1"
 serde = "~1"
 serde_derive = "~1"
 spirit = { version = "~0.1", path = ".." }
 structopt = "~0.2"
+syslog = "~4"
 
 [dev-dependencies]
 version-sync = "~0.5"
