--- a/spirit-daemonize/Cargo.toml
+++ b/spirit-daemonize/Cargo.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 keywords = ["unix", "daemon", "service", "spirit"]
 license = "Apache-2.0/MIT"
 
+[badges]
+travis-ci = { repository = "vorner/spirit" }
+maintenance = { status = "actively-developed" }
+
 [dependencies]
 failure = "~0.1"
 log = "~0.4"
