--- a/spirit-hyper/Cargo.toml
+++ b/spirit-hyper/Cargo.toml
@@ -16,7 +16,8 @@ maintenance = { status = "actively-developed" }
 arc-swap = "~0.3"
 failure = "~0.1"
 futures = "~0.1"
-hyper = "~0.12"
+hyper = "~0.12.16"
+log = "~0.4"
 serde = "~1"
 serde_derive = "~1"
 spirit = { path = "..", version = "~0.2" }
