--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -19,13 +19,12 @@ log = "~0.4"
 parking_lot = "~0.6"
 serde = "~1"
 serde_derive = "~1"
+serde-humanize-rs = "~0.1"
 spirit = { version = "~0.2", path = ".." }
 structopt = "~0.2"
 tk-listen = "~0.2"
 tokio = "~0.1.8"
 
 [dev-dependencies]
-futures = "~0.1"
-lazy_static = "~1"
-tokio = "~0.1"
+env_logger = "~0.6"
 version-sync = "~0.5"
