--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -16,6 +16,7 @@ maintenance = { status = "actively-developed" }
 failure = "~0.1"
 futures = "~0.1"
 log = "~0.4"
+net2 = "~0.2"
 parking_lot = "~0.6"
 serde = "~1"
 serde_derive = "~1"
@@ -27,4 +28,5 @@ tokio = "~0.1.8"
 
 [dev-dependencies]
 env_logger = "~0.6"
+serde_json = "~1"
 version-sync = "~0.5"
