--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spirit"
-version = "0.2.6"
+version = "0.2.7"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Helper to create well behaved daemons with runtime-reconfiguration support"
 documentation = "https://docs.rs/spirit"
@@ -23,10 +23,14 @@ travis-ci = { repository = "vorner/spirit" }
 maintenance = { status = "actively-developed" }
 
 [features]
+ini = ["config/ini"]
+json = ["config/json"]
+hjson = ["config/hjson"]
+yaml = ["config/yaml"]
 
 [dependencies]
 arc-swap = "~0.3"
-config = { version = "~0.9", features = ["toml"] }
+config = { version = "~0.9", default-features = false, features = ["toml"] }
 failure = "~0.1"
 fallible-iterator = "~0.1"
 itertools = "~0.7"
