--- a/spirit-log/Cargo.toml
+++ b/spirit-log/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spirit-log"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Spirit helpers and config fragments for logging"
 documentation = "https://docs.rs/spirit-log"
@@ -24,7 +24,7 @@ log-reroute = "~0.1"
 serde = "~1"
 serde_derive = "~1"
 serde_json = "~1"
-spirit = { version = "~0.2", path = ".." }
+spirit = { version = "~0.2", path = "..", default-features = false }
 structopt = "~0.2"
 syslog = "~4"
 
