--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -30,6 +30,7 @@ tk-listen = "~0.2"
 tokio = "~0.1.8"
 
 [dev-dependencies]
+corona = "~0.4.1"
 env_logger = "~0.6"
 serde_json = "~1"
 version-sync = "~0.5"
