--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ os:
 before_script:
     - |
       (travis_wait rustup component add rustfmt-preview || true) &&
-      (test "$TRAVIS_RUST_VERSION" != nightly || travis_wait rustup component add clippy-preview || true)
+      (travis_wait rustup component add clippy-preview || true)
 
 script:
     - |
@@ -21,8 +21,8 @@ script:
       cargo test --release --all &&
       cargo doc --no-deps --all &&
       (test "$TRAVIS_RUST_VERSION" != nightly || cargo test --release --benches --all) &&
-      (test "$TRAVIS_RUST_VERSION" != nightly || cargo clippy --all -- --deny clippy) &&
-      (test "$TRAVIS_RUST_VERSION" != nightly || cargo fmt --all -- --check)
+      cargo clippy --all -- --deny clippy &&
+      cargo fmt --all -- --check
 
 matrix:
     allow_failures:
