--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
       cargo test --release --all &&
       cargo doc --no-deps --all &&
       (test "$TRAVIS_RUST_VERSION" != nightly || cargo test --release --benches --all) &&
-      cargo clippy --all -- --deny clippy &&
+      cargo clippy --all -- --deny clippy::all &&
       cargo fmt --all -- --check
 
 matrix:
