Config fragment for Reqwest client
It can now decode it and create the client. No automatic stuff yet.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "spirit-daemonize",
     "spirit-hyper",
     "spirit-log",
+    "spirit-reqwest",
     "spirit-tokio",
     "examples/hws-complete",
 ]
