Keywords for crates

--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -7,6 +7,7 @@ documentation = "https://docs.rs/spirit-tokio"
 repository = "https://github.com/vorner/spirit"
 license = "Apache-2.0/MIT"
 readme = "README.md"
+keywords = ["async", "tokio", "service", "configuration", "spirit"]
 
 [features]
 
