--- a/spirit-hyper/Cargo.toml
+++ b/spirit-hyper/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Hyper helpers for Spirit"
 documentation = "https://docs.rs/spirit-hyper"
 repository = "https://github.com/vorner/spirit"
+keywords = ["http", "hyper", "service", "configuration", "spirit"]
 license = "Apache-2.0/MIT"
 readme = "README.md"
 
