--- a/spirit-reqwest/Cargo.toml
+++ b/spirit-reqwest/Cargo.toml
@@ -3,6 +3,16 @@ name = "spirit-reqwest"
 version = "0.1.0"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 edition = "2018"
+description = "Reqwest helpers for Spirit"
+documentation = "https://docs.rs/spirit-hyper"
+repository = "https://github.com/vorner/spirit"
+license = "Apache-2.0/MIT"
+keywords = ["http", "reqwest", "service", "configuration", "spirit"]
+readme = "README.md"
+
+[badges]
+travis-ci = { repository = "vorner/spirit" }
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 arc-swap = "~0.3.6"
@@ -12,7 +22,7 @@ reqwest = "~0.9.5"
 serde = "~1"
 serde_derive = "~1"
 serde-humanize-rs = "~0.1"
-spirit = { version = "~0.2.8", path = ".." }
+spirit = { version = "~0.2.9", path = ".." }
 structopt = "~0.2"
 url = "~1.7"
 url_serde = "~0.2"
