Preliminary strucdoc/config help support
TODO:
* Switch to released version, once it is released.
* Feature-gate it, so we don't depend on it.
* Feature-gate stuff in the spirit-cfg-helper. Or split it?
* Some things are stubbed out by #[structdoc(leaf)] that maybe should be
  #[structdoc(with = ...)]
* Provide the actual documentation (even to the example)

--- a/examples/hws-complete/Cargo.toml
+++ b/examples/hws-complete/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hws-complete"
 version = "0.1.0"
 publish = false
+edition = "2018"
 
 [dependencies]
 hyper = "~0.12"
@@ -9,8 +10,10 @@ log = "~0.4"
 serde = "~1"
 serde_derive = "~1"
 spirit = { path = "../../" }
+spirit-cfg-help = { path = "../../spirit-cfg-help" }
 spirit-daemonize = { path = "../../spirit-daemonize" }
 spirit-hyper = { path = "../../spirit-hyper" }
 spirit-log = { path = "../../spirit-log" }
 spirit-tokio = { path = "../../spirit-tokio" }
+structdoc = { git = "https://github.com/vorner/structdoc" }
 structopt = "~0.2"
