--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ license = "Apache-2.0/MIT"
 [workspace]
 members = [
     "./",
+    "spirit-cfg-help",
     "spirit-daemonize",
     "spirit-hyper",
     "spirit-log",
@@ -42,6 +43,7 @@ parking_lot = "~0.7"
 serde = "~1"
 serde_derive = "~1"
 signal-hook = "~0.1"
+structdoc = { git = "https://github.com/vorner/structdoc" }
 structopt = "~0.2"
 
 [dev-dependencies]
