--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -26,6 +26,7 @@ serde = "~1"
 serde_derive = "~1"
 serde-humanize-rs = "~0.1"
 spirit = { version = "~0.2", path = "..", default-features = false }
+structdoc = { git = "https://github.com/vorner/structdoc" }
 structopt = "~0.2"
 tk-listen = "~0.2"
 tokio = "~0.1.8"
