--- a/spirit-cfg-helpers/Cargo.toml
+++ b/spirit-cfg-helpers/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "spirit-cfg-help"
+name = "spirit-cfg-helpers"
 version = "0.1.0"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 edition = "2018"
+
+[features]
+default = ["cfg-help"]
+cfg-help = ["spirit/cfg-help", "structdoc"]
 
 [dependencies]
 failure = "~0.1"
@@ -10,6 +14,6 @@ serde = "~1"
 serde_json = "~1"
 serde_yaml = "~0.8"
 spirit = { path = "..", version = "~0.2.9", default-features = false }
-structdoc = { git = "https://github.com/vorner/structdoc", default-features = false }
+structdoc = { version = "~0.1", default-features = false, optional = true }
 structopt = { version = "~0.2", default-features = false }
 toml = "~0.4"
