--- a/spirit-daemonize/Cargo.toml
+++ b/spirit-daemonize/Cargo.toml
@@ -13,6 +13,10 @@ license = "Apache-2.0/MIT"
 travis-ci = { repository = "vorner/spirit" }
 maintenance = { status = "actively-developed" }
 
+[features]
+default = ["cfg-help"]
+cfg-help = ["spirit/cfg-help", "structdoc"]
+
 [dependencies]
 failure = "~0.1"
 log = "~0.4"
@@ -22,7 +26,7 @@ serde = "~1"
 serde_derive = "~1"
 spirit = { version = "~0.2", path = "..", default-features = false }
 # TODO: Proper versions, feature flag
-structdoc = { git = "https://github.com/vorner/structdoc" }
+structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
 
 [dev-dependencies]
