--- a/spirit-hyper/Cargo.toml
+++ b/spirit-hyper/Cargo.toml
@@ -13,6 +13,10 @@ readme = "README.md"
 travis-ci = { repository = "vorner/spirit" }
 maintenance = { status = "actively-developed" }
 
+[features]
+default = ["cfg-help"]
+cfg-help = ["spirit/cfg-help", "spirit-tokio/cfg-help", "structdoc"]
+
 [dependencies]
 arc-swap = "~0.3"
 failure = "~0.1"
@@ -21,9 +25,9 @@ hyper = "~0.12.16"
 log = "~0.4"
 serde = "~1"
 serde_derive = "~1"
-spirit = { path = "..", version = "~0.2" }
+spirit = { path = "..", version = "~0.2", default-features = false }
 spirit-tokio = { path = "../spirit-tokio", version = "~0.4", default-features = false }
-structdoc = { git = "https://github.com/vorner/structdoc" }
+structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
 tokio = "~0.1"
 
