--- a/spirit-log/Cargo.toml
+++ b/spirit-log/Cargo.toml
@@ -14,8 +14,9 @@ travis-ci = { repository = "vorner/spirit" }
 maintenance = { status = "actively-developed" }
 
 [features]
-default = ["with-backtrace"]
+default = ["with-backtrace", "cfg-help"]
 with-backtrace = ["log-panics/with-backtrace"]
+cfg-help = ["spirit/cfg-help", "structdoc"]
 
 [dependencies]
 chrono = "~0.4"
@@ -29,7 +30,7 @@ serde = "~1"
 serde_derive = "~1"
 serde_json = "~1"
 spirit = { version = "~0.2", path = "..", default-features = false }
-structdoc = { git = "https://github.com/vorner/structdoc" }
+structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
 syslog = "~4"
 
