--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 keywords = ["async", "tokio", "service", "configuration", "spirit"]
 
 [features]
+default = ["cfg-help"]
+cfg-help = ["spirit/cfg-help", "structdoc"]
 
 [badges]
 travis-ci = { repository = "vorner/spirit" }
@@ -26,7 +28,7 @@ serde = "~1"
 serde_derive = "~1"
 serde-humanize-rs = "~0.1"
 spirit = { version = "~0.2", path = "..", default-features = false }
-structdoc = { git = "https://github.com/vorner/structdoc" }
+structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
 tk-listen = "~0.2"
 tokio = "~0.1.8"
