--- a/spirit-cfg-helpers/Cargo.toml
+++ b/spirit-cfg-helpers/Cargo.toml
@@ -10,6 +10,7 @@ cfg-help = ["spirit/cfg-help", "structdoc"]
 
 [dependencies]
 failure = "~0.1"
+log = "~0.4"
 serde = "~1"
 serde_json = "~1"
 serde_yaml = "~0.8"
