--- a/spirit-reqwest/Cargo.toml
+++ b/spirit-reqwest/Cargo.toml
@@ -21,12 +21,13 @@ cfg-help = ["spirit/cfg-help", "structdoc"]
 [dependencies]
 arc-swap = "~0.3.6"
 failure = "~0.1"
+humantime = "~1"
 log = "~0.4"
 parking_lot = "~0.7"
 reqwest = "~0.9.5"
 serde = "~1"
 serde_derive = "~1"
-serde-humanize-rs = "~0.1"
+serde-humantime = "~0.1"
 spirit = { version = "~0.2.9", path = "..", default-features = false }
 structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
