--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -21,12 +21,13 @@ maintenance = { status = "actively-developed" }
 either = { version = "~1", optional = true }
 failure = "~0.1"
 futures = "~0.1"
+humantime = "~1"
 log = "~0.4"
 net2 = "~0.2"
 parking_lot = "~0.7"
 serde = "~1"
 serde_derive = "~1"
-serde-humanize-rs = "~0.1"
+serde-humantime = "~0.1"
 spirit = { version = "~0.2", path = "..", default-features = false }
 structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
