--- a/spirit-cfg-helpers/Cargo.toml
+++ b/spirit-cfg-helpers/Cargo.toml
@@ -5,15 +5,17 @@ authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 edition = "2018"
 
 [features]
-default = ["cfg-help"]
+default = ["cfg-help", "json", "yaml"]
 cfg-help = ["spirit/cfg-help", "structdoc"]
+json = ["serde_json"]
+yaml = ["serde_yaml"]
 
 [dependencies]
 failure = "~0.1"
 log = "~0.4"
 serde = "~1"
-serde_json = "~1"
-serde_yaml = "~0.8"
+serde_json = { version = "~1", optional = true }
+serde_yaml = { version = "~0.8", optional = true }
 spirit = { path = "..", version = "~0.2.9", default-features = false }
 structdoc = { version = "~0.1", default-features = false, optional = true }
 structopt = { version = "~0.2", default-features = false }
