--- a/spirit-reqwest/Cargo.toml
+++ b/spirit-reqwest/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 edition = "2018"
 description = "Reqwest helpers for Spirit"
-documentation = "https://docs.rs/spirit-hyper"
+documentation = "https://docs.rs/spirit-reqwest"
 repository = "https://github.com/vorner/spirit"
 license = "Apache-2.0/MIT"
 keywords = ["http", "reqwest", "service", "configuration", "spirit"]
