--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/vorner/spirit"
 readme = "README.md"
 keywords = ["unix", "daemon", "service", "configuration", "spirit"]
 license = "Apache-2.0/MIT"
+edition = "2018"
 
 [workspace]
 members = [
@@ -42,8 +43,7 @@ itertools = "~0.7"
 libc = "~0.2"
 log = "~0.4"
 parking_lot = "~0.7"
-serde = "~1"
-serde_derive = "~1"
+serde = { version = "~1", features = ["derive"] }
 signal-hook = "~0.1"
 structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
