--- a/examples/hws-complete/Cargo.toml
+++ b/examples/hws-complete/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 [dependencies]
 hyper = "~0.12"
 log = "~0.4"
-serde = "~1"
-serde_derive = "~1"
+serde = { version = "~1", features = ["derive"] }
 spirit = { path = "../../" }
 spirit-cfg-helpers = { path = "../../spirit-cfg-helpers" }
 spirit-daemonize = { path = "../../spirit-daemonize" }
