--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ cfg-help = ["structdoc"]
 [dependencies]
 arc-swap = "~0.3"
 config = { version = "~0.9", default-features = false, features = ["toml"] }
+either = "~1"
 failure = "~0.1"
 fallible-iterator = "~0.1"
 itertools = "~0.7"
