--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ serde = { version = "~1", features = ["derive"] }
 signal-hook = "~0.1.7"
 structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
+toml = "~0.4"
 
 [dev-dependencies]
 lazy_static = "~1"
