--- a/spirit-log/Cargo.toml
+++ b/spirit-log/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/vorner/spirit"
 readme = "README.md"
 keywords = ["log", "spirit", "service", "configuration"]
 license = "Apache-2.0/MIT"
+edition = "2018"
 
 [badges]
 travis-ci = { repository = "vorner/spirit" }
@@ -26,8 +27,7 @@ itertools = "~0.7"
 log = "~0.4"
 log-panics = "~2"
 log-reroute = "~0.1"
-serde = "~1"
-serde_derive = "~1"
+serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
 spirit = { version = "~0.2", path = "..", default-features = false }
 structdoc = { version = "~0.1", optional = true }
