--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "spirit"
-version = "0.2.10"
+version = "0.3.0"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Helper to create well behaved daemons with runtime-reconfiguration support"
 documentation = "https://docs.rs/spirit"
 repository = "https://github.com/vorner/spirit"
 readme = "README.md"
+categories = ["command-line-interface", "config"]
 keywords = ["unix", "daemon", "service", "configuration", "spirit"]
 license = "Apache-2.0/MIT"
 edition = "2018"
@@ -58,4 +59,4 @@ spirit-hyper = { path = "spirit-hyper" }
 spirit-log = { path = "spirit-log" }
 spirit-tokio = { path = "spirit-tokio" }
 structdoc = "~0.1"
-version-sync = "~0.6"
+version-sync = "~0.7"
