--- a/spirit-hyper/Cargo.toml
+++ b/spirit-hyper/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "spirit-hyper"
-version = "0.4.1"
+version = "0.5.0"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Hyper helpers for Spirit"
 documentation = "https://docs.rs/spirit-hyper"
 repository = "https://github.com/vorner/spirit"
+categories = ["config", "web-programming"]
 keywords = ["http", "hyper", "service", "configuration", "spirit"]
 license = "Apache-2.0/MIT"
 readme = "README.md"
@@ -25,12 +26,12 @@ hyper = "~0.12.16"
 log = "~0.4"
 serde = "~1"
 serde_derive = "~1"
-spirit = { path = "..", version = "~0.2", default-features = false }
-spirit-tokio = { path = "../spirit-tokio", version = "~0.4.2", default-features = false }
+spirit = { path = "..", version = "~0.3", default-features = false }
+spirit-tokio = { path = "../spirit-tokio", version = "~0.5", default-features = false }
 structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
 tokio = "~0.1"
 
 [dev-dependencies]
 env_logger = "~0.6"
-version-sync = "~0.6"
+version-sync = "~0.7"
