--- a/spirit-log/Cargo.toml
+++ b/spirit-log/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "spirit-log"
-version = "0.1.6"
+version = "0.2.0"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Spirit helpers and config fragments for logging"
 documentation = "https://docs.rs/spirit-log"
 repository = "https://github.com/vorner/spirit"
 readme = "README.md"
+categories = ["config", "development-tools::debugging"]
 keywords = ["log", "spirit", "service", "configuration"]
 license = "Apache-2.0/MIT"
 edition = "2018"
@@ -22,17 +23,17 @@ cfg-help = ["spirit/cfg-help", "structdoc"]
 [dependencies]
 chrono = "~0.4"
 failure = "~0.1"
-fern = { version = "~0.5", features = ["syslog-4"] }
-itertools = "~0.7"
+fern = { version = "~0.5.7", features = ["syslog-4"] }
+itertools = "~0.8"
 log = "~0.4"
 log-panics = "~2"
 log-reroute = "~0.1"
 serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
-spirit = { version = "~0.2", path = "..", default-features = false }
+spirit = { version = "~0.3", path = "..", default-features = false }
 structdoc = { version = "~0.1", optional = true }
 structopt = "~0.2"
 syslog = "~4"
 
 [dev-dependencies]
-version-sync = "~0.6"
+version-sync = "~0.7"
