Background logging: docs, making it actually work
And making sure the application terminates in the tests if .terminate is
called.

--- a/spirit-log/Cargo.toml
+++ b/spirit-log/Cargo.toml
@@ -17,7 +17,7 @@ maintenance = { status = "actively-developed" }
 
 [features]
 background = ["crossbeam-channel", "parking_lot"]
-default = ["with-backtrace", "cfg-help", "background"] # XXX Remove background
+default = ["with-backtrace", "cfg-help"]
 with-backtrace = ["log-panics/with-backtrace"]
 cfg-help = ["spirit/cfg-help", "structdoc"]
 
