Minimize uploaded packages
By including only what is needed to compile it. No examples, no tests,
etc.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ categories = ["command-line-interface", "config"]
 keywords = ["unix", "daemon", "service", "configuration", "spirit"]
 license = "Apache-2.0/MIT"
 edition = "2018"
+include = [
+    "Cargo.toml",
+    "src/**",
+]
 
 [workspace]
 members = [
