--- a/spirit-daemonize/Cargo.toml
+++ b/spirit-daemonize/Cargo.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 categories = ["config", "os::unix-apis"]
 keywords = ["unix", "daemon", "service", "spirit"]
 license = "Apache-2.0/MIT"
+include = [
+    "Cargo.toml",
+    "src/**",
+]
 
 [badges]
 travis-ci = { repository = "vorner/spirit" }
