... But keep README.md in the packages, it is rendered on crates.io

--- a/spirit-cfg-helpers/Cargo.toml
+++ b/spirit-cfg-helpers/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["configuration", "spirit", "ux"]
 readme = "README.md"
 include = [
     "Cargo.toml",
+    "README.md",
     "src/**",
 ]
 
