More modern license specification

--- a/spirit-cfg-helpers/Cargo.toml
+++ b/spirit-cfg-helpers/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Helpers for spirit to make interacting with configuration more smooth for the user"
 documentation = "https://docs.rs/spirit-cfg-helpers"
 repository = "https://github.com/vorner/spirit"
-license = "Apache-2.0/MIT"
+license = "Apache-2.0 OR MIT"
 categories = ["command-line-interface", "config"]
 keywords = ["configuration", "spirit", "ux"]
 readme = "README.md"
