--- a/spirit-reqwest/Cargo.toml
+++ b/spirit-reqwest/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Reqwest helpers for Spirit"
 documentation = "https://docs.rs/spirit-reqwest"
 repository = "https://github.com/vorner/spirit"
-license = "Apache-2.0/MIT"
+license = "Apache-2.0 OR MIT"
 categories = ["config", "web-programming"]
 keywords = ["http", "reqwest", "service", "configuration", "spirit"]
 readme = "README.md"
