--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Tokio helpers for Spirit"
 documentation = "https://docs.rs/spirit-tokio"
 repository = "https://github.com/vorner/spirit"
-license = "Apache-2.0/MIT"
+license = "Apache-2.0 OR MIT"
 readme = "README.md"
 categories = ["config", "network-programming"]
 keywords = ["async", "tokio", "service", "configuration", "spirit"]
