--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/vorner/spirit"
 readme = "README.md"
 categories = ["command-line-interface", "config"]
 keywords = ["unix", "daemon", "service", "configuration", "spirit"]
-license = "Apache-2.0/MIT"
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 include = [
     "Cargo.toml",
