--- a/spirit-log/Cargo.toml
+++ b/spirit-log/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/vorner/spirit"
 readme = "README.md"
 categories = ["config", "development-tools::debugging"]
 keywords = ["log", "spirit", "service", "configuration"]
-license = "Apache-2.0/MIT"
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 include = [
     "Cargo.toml",
