--- a/spirit-hyper/Cargo.toml
+++ b/spirit-hyper/Cargo.toml
@@ -9,6 +9,7 @@ categories = ["config", "web-programming"]
 keywords = ["http", "hyper", "service", "configuration", "spirit"]
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
+edition = "2018"
 include = [
     "Cargo.toml",
     "README.md",
@@ -29,7 +30,7 @@ failure = "~0.1"
 futures = "~0.1"
 hyper = "~0.12.17"
 log = "~0.4"
-serde = "~1"
+serde = { version = "~1", features = ["derive"] }
 serde_derive = "~1"
 spirit = { path = "..", version = "~0.3", default-features = false }
 spirit-tokio = { path = "../spirit-tokio", version = "~0.5", default-features = false }
