--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,3 +65,11 @@ spirit-log = { version = "~0.2", path = "spirit-log" }
 spirit-tokio = { version = "~0.5", path = "spirit-tokio" }
 structdoc = "~0.1.3"
 version-sync = "~0.7"
+
+# Tests and building is faster with debug turned off and nobody really run a debugger on the
+# produced binaries here ever. If it is needed, enable temporarily.
+[profile.dev]
+debug = false
+
+[profile.test]
+debug = false
