--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ script:
       export PATH="$PATH":~/.cargo/bin &&
       export RUST_BACKTRACE=1 &&
       cargo build &&
-      cargo test --release --all &&
+      cargo test --all &&
+      cargo test --release --all --all-features &&
       cargo doc --no-deps --all &&
       (test "$TRAVIS_RUST_VERSION" != nightly || cargo test --release --benches --all) &&
       cargo clippy --all -- --deny clippy::all &&
