--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ toml = "~0.4"
 [dev-dependencies]
 lazy_static = "~1"
 hyper = "~0.12"
+serde-humantime = "~0.1"
 spirit-cfg-helpers = { version = "~0.2", path = "spirit-cfg-helpers" }
 spirit-daemonize = { version = "~0.2", path = "spirit-daemonize" }
 spirit-hyper = { version = "~0.5", path = "spirit-hyper" }
