--- a/spirit-cfg-helpers/Cargo.toml
+++ b/spirit-cfg-helpers/Cargo.toml
@@ -27,6 +27,7 @@ json = ["serde_json"]
 yaml = ["serde_yaml"]
 
 [dependencies]
+arc-swap = "~0.3"
 failure = "~0.1"
 log = "~0.4"
 serde = "~1"
@@ -38,5 +39,6 @@ structopt = { version = "~0.2", default-features = false }
 toml = "~0.5"
 
 [dev-dependencies]
+once_cell = "~0.2"
 serde_derive = "~1"
 version-sync = "~0.7"
