--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,5 @@ script:
       cargo test --release --all --all-features &&
       cargo doc --no-deps --all &&
       (test "$TRAVIS_RUST_VERSION" != nightly || cargo test --release --benches --all) &&
-      cargo clippy --all -- --deny clippy::all &&
-      cargo fmt --all -- --check
-
-matrix:
-    allow_failures:
-        - rust: nightly
+      (test "$TRAVIS_RUST_VERSION" == nightly || cargo clippy --all -- --deny clippy::all) &&
+      (test "$TRAVIS_RUST_VERSION" == nightly || cargo fmt --all -- --check)
