--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,12 +33,14 @@ travis-ci = { repository = "vorner/spirit" }
 maintenance = { status = "actively-developed" }
 
 [features]
-default = ["cfg-help", "json", "yaml"]
+default = ["cfg-help", "json", "yaml", "suggestions", "color"]
 ini = ["config/ini"]
 json = ["config/json"]
 hjson = ["config/hjson"]
 yaml = ["config/yaml"]
 cfg-help = ["structdoc"]
+suggestions = ["structopt/suggestions"]
+color = ["structopt/color"]
 
 [dependencies]
 arc-swap = "~0.4"
@@ -56,7 +58,7 @@ serde_ignored = { version = "~0.1.0" }
 serde_path_to_error = "~0.1"
 signal-hook = "~0.1.8"
 structdoc = { version = "~0.1.3", optional = true }
-structopt = "~0.3"
+structopt = { version = "~0.3", default-features = false }
 toml = "~0.5"
 
 [dev-dependencies]
