--- a/spirit-hyper/Cargo.toml
+++ b/spirit-hyper/Cargo.toml
@@ -34,9 +34,9 @@ serde_derive = "~1"
 spirit = { path = "..", version = "~0.3.3", default-features = false }
 spirit-tokio = { path = "../spirit-tokio", version = "~0.5", default-features = false }
 structdoc = { version = "~0.1", optional = true }
-structopt = "~0.3"
+structopt = { version = "~0.3", default-features = false }
 tokio = "~0.1"
 
 [dev-dependencies]
-env_logger = "~0.6"
+env_logger = "~0.7"
 version-sync = "~0.8"
