--- a/spirit-log/Cargo.toml
+++ b/spirit-log/Cargo.toml
@@ -42,7 +42,7 @@ serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
 spirit = { version = "~0.3.1", path = "..", default-features = false }
 structdoc = { version = "~0.1", optional = true }
-structopt = "~0.3"
+structopt = { version = "~0.3", default-features = false }
 syslog = { version = "~4", optional = true }
 
 [dev-dependencies]
